K8S/Client/Customer2/Web-Deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: housepriceweb-deployment
  namespace: customer2
  labels:
    app: houseprice
spec:
  replicas: 1
  selector:
    matchLabels:
      app: houseprice
  template:
    metadata:
      labels:
        app: houseprice
    spec:
      volumes:
      - name: branding-storage
        persistentVolumeClaim:
          claimName: webbranding-claim
      containers:
      - name: housepricesweb
        image: localhost:5000/housepriceweb:1.0.0.0
        volumeMounts:
        - name: branding-storage
          mountPath: /app/wwwroot/branding
