K8S/Client/Customer2/backend-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: housepriceapi-deployment
  namespace: customer2
  labels:
    app: housepriceapi
spec:
  replicas: 5
  selector:
    matchLabels:
      app: housepriceapi
  template:
    metadata:
      labels:
        app: housepriceapi
    spec:
      containers:
      - name: housepricewebapi
        image: localhost:5000/housepricewebapi:1.0.0.34
