K8S/Client/Customer2/importer-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: importer-deployment
  namespace: customer2
  labels:
    app: housepriceimporter
spec:
  replicas: 1
  selector:
    matchLabels:
      app: housepriceimporter
  template:
    metadata:
      labels:
        app: housepriceimporter
    spec:
      volumes:
      - name: transactiondroplocation
        persistentVolumeClaim:
          claimName: importerwatch-claim
      - name: transactionsuccesslocation
        persistentVolumeClaim:
          claimName: importersuccess-claim
      - name: transactionprocessinglocation
        persistentVolumeClaim:
          claimName: importerprocessing-claim
      containers:
      - name: importer
        image: localhost:5000/housepriceimporter:1.0.0.0
        volumeMounts:
        - name: transactiondroplocation
          mountPath: /transactions/drop
        - name: transactionsuccesslocation
          mountPath: /transactions/success
        - name: transactionprocessinglocation
          mountPath: /transactions/processing
