K8S/Client/Customer2/service-web.yml
kind: Service
apiVersion: v1
metadata:
  name: houseprice
  namespace: customer2
spec:
  ports:
  - protocol: TCP
    port: 80
  selector:
    app: houseprice
