K8S/Client/Customer2/Ingress.yml
# Ingress to split by customer
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: houseprice
  namespace: customer2
spec:
  rules:
  - host: customer2.k8sdemo.com
    http:
      paths:
      - path: /
        backend:
          serviceName: houseprice
          servicePort: 80
